# shaper_cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/canvas/: __init__.py  canvas.py  serializer.py
app/cli/: repl.py
app/commands/: builders.py  handlers.py
app/models/: __init__.py  base.py  shapes.py
tests/: test_edit.py
