[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.backends.legacy:build'

[project]
name = 'shaper_cli'
version = '1.0.0'
requires-python = '>=3.12'

[tool.setuptools.packages.find]
where = ['.']

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
filterwarnings = ['ignore::pytest.PytestConfigWarning']
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"